--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^2.5.2",
     "events": "^1.1.1",
     "express": "^4.14.0",
+    "morgan": "^1.7.0",
     "request": "^2.79.0",
     "require": "^2.4.20",
     "uuid": "^3.0.0",
