--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "Kananek Atichatviwat",
   "license": "ISC",
   "dependencies": {
-    "async": "^2.1.4",
+    "async": "^2.1.5",
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.4.7",
     "body-parser": "^1.15.2",
@@ -21,6 +21,7 @@
     "morgan": "^1.7.0",
     "request": "^2.79.0",
     "require": "^2.4.20",
+    "synchronize": "^2.0.0",
     "uuid": "^3.0.0",
     "wait-until": "0.0.2",
     "wait.for": "^0.6.6"
