--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.14.0",
     "mongoose": "^4.10.2",
     "morgan": "^1.7.0",
+    "promise": "^8.0.1",
     "request": "^2.79.0",
     "require": "^2.4.20",
     "ssh2-sftp-client": "^1.0.5",
